# JsonServer

./: CMakeLists.txt  CMakePresets.json  README.md  client.py  main.cpp
defaults/: configuration.proto
solution/: CMakeLists.txt
solution/core/: CMakeLists.txt
solution/core/config_service/: AbstractConfiguration.h  ConfigurationService.cpp  ConfigurationService.h  ServerConfiguration.cpp  ServerConfiguration.h  WriterConfiguration.cpp  WriterConfiguration.h
solution/core/logging_service/: Logger.cpp  Logger.h
solution/core/protobuf/: configuration.proto
solution/core/utility/: ConcurrentQueue.h  Message.h
solution/core/writer_service/: Thread.h  WriterThread.cpp  WriterThread.h
solution/server/: CMakeLists.txt  Server.cpp  Server.h
tests/: CMakeLists.txt  SolutionFuctionality.cpp
